# rust-forth-interactive-compiler

./: .Cargo.toml.un~  Cargo.toml  Cargo.toml~  README.md  init.forth  testrun.fth
src/: history.txt  main.rs
