[package]
name = "rust-forth-interactive-compiler"
version = "0.1.4"
authors = ["Frederick Price <rprice@pricemail.ca>"]
edition = "2018"
license = "MIT"
description = "A interactive interfaco to the Forth compiler written in Rust"
homepage = "https://github.com/rickprice/rust-forth-interactive-compiler"
repository = "https://github.com/rickprice/rust-forth-interactive-compiler"
keywords = ["forth","compiler"]
categories = ["embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-forth-compiler = "0.4.2"
rustyline = "5.0.2"
